--- a/RL_Value_Iteration (1).ipynb
+++ b/RL_Value_Iteration (1).ipynb
@@ -38,16 +38,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xq4FC7N-DYqX",
-        "outputId": "d68e0012-b80a-4b81-8643-9df03c3f7fe6"
+        "outputId": "0bbe7b9f-f2df-4ebb-a131-151bbcca5164"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Collecting gym-walk\n",
-            "  Cloning https://github.com/mimoralea/gym-walk to /tmp/pip-install-bx1uzy1f/gym-walk_4c52b1d4f86840b8a9457d7d197f06cf\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/mimoralea/gym-walk /tmp/pip-install-bx1uzy1f/gym-walk_4c52b1d4f86840b8a9457d7d197f06cf\n",
+            "  Cloning https://github.com/mimoralea/gym-walk to /tmp/pip-install-08yuys09/gym-walk_c67b19a6a4264b3aba1bb95a75e4a43e\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/mimoralea/gym-walk /tmp/pip-install-08yuys09/gym-walk_c67b19a6a4264b3aba1bb95a75e4a43e\n",
             "  Resolved https://github.com/mimoralea/gym-walk to commit 5999016267d6de2f5a63307fb00dfd63de319ac1\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: gym in /usr/local/lib/python3.10/dist-packages (from gym-walk) (0.25.2)\n",
@@ -56,8 +56,8 @@
             "Requirement already satisfied: gym-notices>=0.0.4 in /usr/local/lib/python3.10/dist-packages (from gym->gym-walk) (0.0.8)\n",
             "Building wheels for collected packages: gym-walk\n",
             "  Building wheel for gym-walk (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for gym-walk: filename=gym_walk-0.0.2-py3-none-any.whl size=4054 sha256=a1744dbf46e3765a62978e9cc82ce454ce7bad18759fad664ac93919452c9088\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-g6uyv1t6/wheels/24/fe/c4/0cbc7511d29265bad7e28a09311db3f87f0cafba74af54d530\n",
+            "  Created wheel for gym-walk: filename=gym_walk-0.0.2-py3-none-any.whl size=4053 sha256=2be424f49917905723fba170cc47e3f7fd47154d141a2f9164ab86586264483e\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-0c5w0sv_/wheels/24/fe/c4/0cbc7511d29265bad7e28a09311db3f87f0cafba74af54d530\n",
             "Successfully built gym-walk\n",
             "Installing collected packages: gym-walk\n",
             "Successfully installed gym-walk-0.0.2\n"
@@ -161,30 +161,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {
         "id": "daeOaNMIfPsM"
       },
       "outputs": [],
       "source": [
-        "env = gym.make('FrozenLake-v1')\n",
+        "rand=['SGFF','FFFH','FHHF','HFFH']\n",
+        "env = gym.make('FrozenLake-v1',desc=rand)\n",
         "init_state = env.reset()\n",
-        "goal_state = 15\n",
+        "goal_state = 1\n",
         "P = env.env.P"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gx5F-kzIglWD",
-        "outputId": "75592190-18ea-432a-d7b9-f5632060069b"
+        "outputId": "ad028688-8888-4d5a-8be5-2084b7e23ab7"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{0: {0: [(0.3333333333333333, 0, 0.0, False),\n",
@@ -192,29 +194,21 @@
               "   (0.3333333333333333, 4, 0.0, False)],\n",
               "  1: [(0.3333333333333333, 0, 0.0, False),\n",
               "   (0.3333333333333333, 4, 0.0, False),\n",
-              "   (0.3333333333333333, 1, 0.0, False)],\n",
+              "   (0.3333333333333333, 1, 1.0, True)],\n",
               "  2: [(0.3333333333333333, 4, 0.0, False),\n",
-              "   (0.3333333333333333, 1, 0.0, False),\n",
+              "   (0.3333333333333333, 1, 1.0, True),\n",
               "   (0.3333333333333333, 0, 0.0, False)],\n",
-              "  3: [(0.3333333333333333, 1, 0.0, False),\n",
+              "  3: [(0.3333333333333333, 1, 1.0, True),\n",
               "   (0.3333333333333333, 0, 0.0, False),\n",
               "   (0.3333333333333333, 0, 0.0, False)]},\n",
-              " 1: {0: [(0.3333333333333333, 1, 0.0, False),\n",
-              "   (0.3333333333333333, 0, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True)],\n",
-              "  1: [(0.3333333333333333, 0, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True),\n",
-              "   (0.3333333333333333, 2, 0.0, False)],\n",
-              "  2: [(0.3333333333333333, 5, 0.0, True),\n",
-              "   (0.3333333333333333, 2, 0.0, False),\n",
-              "   (0.3333333333333333, 1, 0.0, False)],\n",
-              "  3: [(0.3333333333333333, 2, 0.0, False),\n",
-              "   (0.3333333333333333, 1, 0.0, False),\n",
-              "   (0.3333333333333333, 0, 0.0, False)]},\n",
+              " 1: {0: [(1.0, 1, 0, True)],\n",
+              "  1: [(1.0, 1, 0, True)],\n",
+              "  2: [(1.0, 1, 0, True)],\n",
+              "  3: [(1.0, 1, 0, True)]},\n",
               " 2: {0: [(0.3333333333333333, 2, 0.0, False),\n",
-              "   (0.3333333333333333, 1, 0.0, False),\n",
+              "   (0.3333333333333333, 1, 1.0, True),\n",
               "   (0.3333333333333333, 6, 0.0, False)],\n",
-              "  1: [(0.3333333333333333, 1, 0.0, False),\n",
+              "  1: [(0.3333333333333333, 1, 1.0, True),\n",
               "   (0.3333333333333333, 6, 0.0, False),\n",
               "   (0.3333333333333333, 3, 0.0, False)],\n",
               "  2: [(0.3333333333333333, 6, 0.0, False),\n",
@@ -222,7 +216,7 @@
               "   (0.3333333333333333, 2, 0.0, False)],\n",
               "  3: [(0.3333333333333333, 3, 0.0, False),\n",
               "   (0.3333333333333333, 2, 0.0, False),\n",
-              "   (0.3333333333333333, 1, 0.0, False)]},\n",
+              "   (0.3333333333333333, 1, 1.0, True)]},\n",
               " 3: {0: [(0.3333333333333333, 3, 0.0, False),\n",
               "   (0.3333333333333333, 2, 0.0, False),\n",
               "   (0.3333333333333333, 7, 0.0, True)],\n",
@@ -240,29 +234,37 @@
               "   (0.3333333333333333, 8, 0.0, False)],\n",
               "  1: [(0.3333333333333333, 4, 0.0, False),\n",
               "   (0.3333333333333333, 8, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True)],\n",
+              "   (0.3333333333333333, 5, 0.0, False)],\n",
               "  2: [(0.3333333333333333, 8, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True),\n",
+              "   (0.3333333333333333, 5, 0.0, False),\n",
               "   (0.3333333333333333, 0, 0.0, False)],\n",
-              "  3: [(0.3333333333333333, 5, 0.0, True),\n",
+              "  3: [(0.3333333333333333, 5, 0.0, False),\n",
               "   (0.3333333333333333, 0, 0.0, False),\n",
               "   (0.3333333333333333, 4, 0.0, False)]},\n",
-              " 5: {0: [(1.0, 5, 0, True)],\n",
-              "  1: [(1.0, 5, 0, True)],\n",
-              "  2: [(1.0, 5, 0, True)],\n",
-              "  3: [(1.0, 5, 0, True)]},\n",
+              " 5: {0: [(0.3333333333333333, 1, 1.0, True),\n",
+              "   (0.3333333333333333, 4, 0.0, False),\n",
+              "   (0.3333333333333333, 9, 0.0, True)],\n",
+              "  1: [(0.3333333333333333, 4, 0.0, False),\n",
+              "   (0.3333333333333333, 9, 0.0, True),\n",
+              "   (0.3333333333333333, 6, 0.0, False)],\n",
+              "  2: [(0.3333333333333333, 9, 0.0, True),\n",
+              "   (0.3333333333333333, 6, 0.0, False),\n",
+              "   (0.3333333333333333, 1, 1.0, True)],\n",
+              "  3: [(0.3333333333333333, 6, 0.0, False),\n",
+              "   (0.3333333333333333, 1, 1.0, True),\n",
+              "   (0.3333333333333333, 4, 0.0, False)]},\n",
               " 6: {0: [(0.3333333333333333, 2, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True),\n",
-              "   (0.3333333333333333, 10, 0.0, False)],\n",
-              "  1: [(0.3333333333333333, 5, 0.0, True),\n",
-              "   (0.3333333333333333, 10, 0.0, False),\n",
+              "   (0.3333333333333333, 5, 0.0, False),\n",
+              "   (0.3333333333333333, 10, 0.0, True)],\n",
+              "  1: [(0.3333333333333333, 5, 0.0, False),\n",
+              "   (0.3333333333333333, 10, 0.0, True),\n",
               "   (0.3333333333333333, 7, 0.0, True)],\n",
-              "  2: [(0.3333333333333333, 10, 0.0, False),\n",
+              "  2: [(0.3333333333333333, 10, 0.0, True),\n",
               "   (0.3333333333333333, 7, 0.0, True),\n",
               "   (0.3333333333333333, 2, 0.0, False)],\n",
               "  3: [(0.3333333333333333, 7, 0.0, True),\n",
               "   (0.3333333333333333, 2, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True)]},\n",
+              "   (0.3333333333333333, 5, 0.0, False)]},\n",
               " 7: {0: [(1.0, 7, 0, True)],\n",
               "  1: [(1.0, 7, 0, True)],\n",
               "  2: [(1.0, 7, 0, True)],\n",
@@ -272,46 +274,38 @@
               "   (0.3333333333333333, 12, 0.0, True)],\n",
               "  1: [(0.3333333333333333, 8, 0.0, False),\n",
               "   (0.3333333333333333, 12, 0.0, True),\n",
-              "   (0.3333333333333333, 9, 0.0, False)],\n",
+              "   (0.3333333333333333, 9, 0.0, True)],\n",
               "  2: [(0.3333333333333333, 12, 0.0, True),\n",
-              "   (0.3333333333333333, 9, 0.0, False),\n",
+              "   (0.3333333333333333, 9, 0.0, True),\n",
               "   (0.3333333333333333, 4, 0.0, False)],\n",
-              "  3: [(0.3333333333333333, 9, 0.0, False),\n",
+              "  3: [(0.3333333333333333, 9, 0.0, True),\n",
               "   (0.3333333333333333, 4, 0.0, False),\n",
               "   (0.3333333333333333, 8, 0.0, False)]},\n",
-              " 9: {0: [(0.3333333333333333, 5, 0.0, True),\n",
-              "   (0.3333333333333333, 8, 0.0, False),\n",
-              "   (0.3333333333333333, 13, 0.0, False)],\n",
-              "  1: [(0.3333333333333333, 8, 0.0, False),\n",
-              "   (0.3333333333333333, 13, 0.0, False),\n",
-              "   (0.3333333333333333, 10, 0.0, False)],\n",
-              "  2: [(0.3333333333333333, 13, 0.0, False),\n",
-              "   (0.3333333333333333, 10, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True)],\n",
-              "  3: [(0.3333333333333333, 10, 0.0, False),\n",
-              "   (0.3333333333333333, 5, 0.0, True),\n",
-              "   (0.3333333333333333, 8, 0.0, False)]},\n",
-              " 10: {0: [(0.3333333333333333, 6, 0.0, False),\n",
-              "   (0.3333333333333333, 9, 0.0, False),\n",
-              "   (0.3333333333333333, 14, 0.0, False)],\n",
-              "  1: [(0.3333333333333333, 9, 0.0, False),\n",
-              "   (0.3333333333333333, 14, 0.0, False),\n",
-              "   (0.3333333333333333, 11, 0.0, True)],\n",
-              "  2: [(0.3333333333333333, 14, 0.0, False),\n",
-              "   (0.3333333333333333, 11, 0.0, True),\n",
-              "   (0.3333333333333333, 6, 0.0, False)],\n",
-              "  3: [(0.3333333333333333, 11, 0.0, True),\n",
-              "   (0.3333333333333333, 6, 0.0, False),\n",
-              "   (0.3333333333333333, 9, 0.0, False)]},\n",
-              " 11: {0: [(1.0, 11, 0, True)],\n",
-              "  1: [(1.0, 11, 0, True)],\n",
-              "  2: [(1.0, 11, 0, True)],\n",
-              "  3: [(1.0, 11, 0, True)]},\n",
+              " 9: {0: [(1.0, 9, 0, True)],\n",
+              "  1: [(1.0, 9, 0, True)],\n",
+              "  2: [(1.0, 9, 0, True)],\n",
+              "  3: [(1.0, 9, 0, True)]},\n",
+              " 10: {0: [(1.0, 10, 0, True)],\n",
+              "  1: [(1.0, 10, 0, True)],\n",
+              "  2: [(1.0, 10, 0, True)],\n",
+              "  3: [(1.0, 10, 0, True)]},\n",
+              " 11: {0: [(0.3333333333333333, 7, 0.0, True),\n",
+              "   (0.3333333333333333, 10, 0.0, True),\n",
+              "   (0.3333333333333333, 15, 0.0, True)],\n",
+              "  1: [(0.3333333333333333, 10, 0.0, True),\n",
+              "   (0.3333333333333333, 15, 0.0, True),\n",
+              "   (0.3333333333333333, 11, 0.0, False)],\n",
+              "  2: [(0.3333333333333333, 15, 0.0, True),\n",
+              "   (0.3333333333333333, 11, 0.0, False),\n",
+              "   (0.3333333333333333, 7, 0.0, True)],\n",
+              "  3: [(0.3333333333333333, 11, 0.0, False),\n",
+              "   (0.3333333333333333, 7, 0.0, True),\n",
+              "   (0.3333333333333333, 10, 0.0, True)]},\n",
               " 12: {0: [(1.0, 12, 0, True)],\n",
               "  1: [(1.0, 12, 0, True)],\n",
               "  2: [(1.0, 12, 0, True)],\n",
               "  3: [(1.0, 12, 0, True)]},\n",
-              " 13: {0: [(0.3333333333333333, 9, 0.0, False),\n",
+              " 13: {0: [(0.3333333333333333, 9, 0.0, True),\n",
               "   (0.3333333333333333, 12, 0.0, True),\n",
               "   (0.3333333333333333, 13, 0.0, False)],\n",
               "  1: [(0.3333333333333333, 12, 0.0, True),\n",
@@ -319,21 +313,21 @@
               "   (0.3333333333333333, 14, 0.0, False)],\n",
               "  2: [(0.3333333333333333, 13, 0.0, False),\n",
               "   (0.3333333333333333, 14, 0.0, False),\n",
-              "   (0.3333333333333333, 9, 0.0, False)],\n",
+              "   (0.3333333333333333, 9, 0.0, True)],\n",
               "  3: [(0.3333333333333333, 14, 0.0, False),\n",
-              "   (0.3333333333333333, 9, 0.0, False),\n",
+              "   (0.3333333333333333, 9, 0.0, True),\n",
               "   (0.3333333333333333, 12, 0.0, True)]},\n",
-              " 14: {0: [(0.3333333333333333, 10, 0.0, False),\n",
+              " 14: {0: [(0.3333333333333333, 10, 0.0, True),\n",
               "   (0.3333333333333333, 13, 0.0, False),\n",
               "   (0.3333333333333333, 14, 0.0, False)],\n",
               "  1: [(0.3333333333333333, 13, 0.0, False),\n",
               "   (0.3333333333333333, 14, 0.0, False),\n",
-              "   (0.3333333333333333, 15, 1.0, True)],\n",
+              "   (0.3333333333333333, 15, 0.0, True)],\n",
               "  2: [(0.3333333333333333, 14, 0.0, False),\n",
-              "   (0.3333333333333333, 15, 1.0, True),\n",
-              "   (0.3333333333333333, 10, 0.0, False)],\n",
-              "  3: [(0.3333333333333333, 15, 1.0, True),\n",
-              "   (0.3333333333333333, 10, 0.0, False),\n",
+              "   (0.3333333333333333, 15, 0.0, True),\n",
+              "   (0.3333333333333333, 10, 0.0, True)],\n",
+              "  3: [(0.3333333333333333, 15, 0.0, True),\n",
+              "   (0.3333333333333333, 10, 0.0, True),\n",
               "   (0.3333333333333333, 13, 0.0, False)]},\n",
               " 15: {0: [(1.0, 15, 0, True)],\n",
               "  1: [(1.0, 15, 0, True)],\n",
@@ -341,9 +335,8 @@
               "  3: [(1.0, 15, 0, True)]}}"
             ]
           },
-          "execution_count": 9,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 23
         }
       ],
       "source": [
@@ -361,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 24,
       "metadata": {
         "id": "AUlEXpzRgu_n"
       },
@@ -389,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 25,
       "metadata": {
         "id": "DKT7CNWjfprP"
       },
@@ -401,26 +394,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "P2VMyY0fhd6B",
-        "outputId": "28748b49-76a3-42c3-f22e-f12daf8c0bda"
+        "outputId": "e8c85096-1c0e-4c75-fac1-13d202e427a5"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Aadheeshwar A 212221230001\n",
             "Optimal policy and state-value function (VI):\n",
             "Policy:\n",
-            "| 00      < | 01      ^ | 02      ^ | 03      ^ |\n",
-            "| 04      < |           | 06      < |           |\n",
-            "| 08      ^ | 09      v | 10      < |           |\n",
-            "|           | 13      > | 14      v |           |\n"
+            "| 00      ^ |           | 02      ^ | 03      ^ |\n",
+            "| 04      ^ | 05      ^ | 06      < |           |\n",
+            "| 08      < |           |           | 11      < |\n",
+            "|           | 13      < | 14      < |           |\n"
           ]
         }
       ],
@@ -433,21 +426,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yEDEsHpWh3EB",
-        "outputId": "8bfe812e-e2ea-4d1f-9f90-30d192038ffc"
+        "outputId": "4077ce6f-d240-45d6-fbfb-0e0af305fbd8"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Aadheeshwar A 212221230001\n",
-            "Reaches goal 69.00%. Obtains an average undiscounted return of 0.6900.\n"
+            "Reaches goal 100.00%. Obtains an average undiscounted return of 1.0000.\n"
           ]
         }
       ],
@@ -461,25 +454,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0i9CtQQ3iDFF",
-        "outputId": "775b4254-8ec0-48c8-9d68-12d7d6265a62"
+        "outputId": "f430670c-5c1c-418a-e21a-65f0dc2cce12"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Aadheeshwar A 212221230001\n",
             "State-value function:\n",
-            "| 00  0.542 | 01 0.4988 | 02 0.4707 | 03 0.4569 |\n",
-            "| 04 0.5585 |           | 06 0.3583 |           |\n",
-            "| 08 0.5918 | 09 0.6431 | 10 0.6152 |           |\n",
-            "|           | 13 0.7417 | 14 0.8628 |           |\n"
+            "| 00 0.9804 |           | 02 0.9532 | 03 0.9251 |\n",
+            "| 04 0.8861 | 05 0.8187 | 06 0.5847 |           |\n",
+            "| 08 0.4365 |           |           | 11    0.0 |\n",
+            "|           | 13    0.0 | 14    0.0 |           |\n"
           ]
         }
       ],
@@ -491,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "oR0jccufi7ML"
       },
